# deepseek-material-v3

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  INSTALLATION.md  INTEGRATION_TEST_SUMMARY.md  LICENSE  Makefile  PERFORMANCE_VALIDATION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  README.md  TESTING_GUIDE.md  coverage.xml  create_examples.py  docker-compose.yml  environment.yml  fix_unicode.py  pyproject.toml  pytest.ini  requirements_phase2.txt  setup.py  test_integration_check.py  verify_ballistic_implementation.py
config/: data_pipeline_config.yaml
data/: jdft_3d-7-7-2018.json
docs/: API_REFERENCE.md  APPLICATION_RANKING.md  CASE_STUDIES.md  CONFIGURATION_GUIDE.md  DATA_PIPELINE_GUIDE.md  JARVIS_INTEGRATION.md  MANUAL_TESTING_GUIDE.md  METHODOLOGY.md  PHASE2_VERIFICATION_REPORT.md  QUICK_TEST_REFERENCE.md  USER_GUIDE.md
examples/: application_ranking_example.py  ballistic_prediction_example.py  configuration_example.py  create_workflow_notebook.py  experimental_planning_example.py  jarvis_data_loading_example.py  multi_source_data_combination_example.py  performance_optimization_example.py  screening_workflow_example.py  validation_example.py
k8s/: README.md  app-deployment.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secrets.yaml
notebooks/: 00_quickstart_tutorial.ipynb  01_exploratory_analysis.ipynb  02_ml_model_training.ipynb  03_dopant_screening.ipynb  04_mechanism_analysis.ipynb  05_interactive_exploration.ipynb  README.md  (+1 more)
(+465 files in other folders)
